MultiCheckbox and Radio test form

--- a/module/Application/view/application/test/form-color.phtml
+++ b/module/Application/view/application/test/form-color.phtml
@@ -24,7 +24,8 @@
 
         <?php
         if (!empty($this->data)) {
-            ?><pre><?php
+            ?><h3>Postback</h3>
+            <pre><?php
             print_r($this->data);
             ?></pre><?php
         }
